# ai-closet2.0

./: .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  OUTFIT_INTERFACE_SPEC.md  README.md  docker-compose.yml  production-plan.md
backend/: .env.example  CLEANUP_SUMMARY.md  CODEBASE_CLEANUP_SUMMARY.md  COMPLETE_IMPROVEMENTS_SUMMARY.py  Dockerfile  Dockerfile.gcp  Makefile  PHASE_1_SUMMARY.md  QUIZ_IMAGES_GUIDE.md  QUIZ_REFACTOR_COMPLETE.md  alembic.ini  analyze_color_failures.py  cloudbuild.yaml  create_tables.py  create_test_image.py  debug_closet.py  debug_hsv.py  debug_matching.py  debug_real_images.py  debug_specific_colors.py  gcp-architecture.md  init.sql  logging_config.py  pyproject.toml  real_world_testing_expectations.py  requirements.txt  test_background_suppression.py  test_clip_debug.py  test_color_detection.py  test_comprehensive_colors.py  test_fashion_clip.py  test_gemini_manual.py  test_hybrid_service.py  test_image_normalization.py  test_vision.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_setup.py  002_add_auth_tokens.py  003_add_quiz_system_tables.py  004_add_style_feedback_table.py  005_fix_confidence_score.py  77a97650c4f7_quiz_system_v2_simplified.py
backend/app/: main.py
backend/app/api/: auth.py  closet.py  feature_learning.py  outfit_recommendations.py  quiz.py  users.py
backend/app/core/: config.py  database.py  dependencies.py  gcp_config.py  migration_utils.py  rate_limiting.py  security.py
backend/app/middleware/: security.py
backend/app/models/: __init__.py  base.py  clothing_item.py  outfit_recommendation.py  quiz.py  quiz_system.py  style_profile.py  user.py
backend/app/schemas/: __init__.py  clothing_item.py  outfit_recommendation.py  quiz.py  quiz_system.py  security.py  style_profile.py  user.py
backend/app/scripts/: admin_quiz_manager.py  seed_quiz_data.py
backend/app/services/: auth_service.py  behavioral_analysis_service.py  email_service.py  fashion_clip_service.py  feature_learning_service.py  gcp_color_brand_service.py  gcp_storage_service.py  (+7 more)
backend/docs/: migrations.md
backend/monitoring/: performance_monitor.py
backend/scripts/: check_quiz_images.py  manage_migrations.py  populate_quiz_items.py  seed_categories.py  seed_female_quiz.py  seed_quiz_items.py  update_quiz_to_static_urls.py  update_quiz_urls_from_gcs.py  upload_quiz_images.py
backend/tests/: conftest.py  test_auth_api.py  test_auth_service.py  test_behavioral_analysis_service.py  test_closet_management_integration.py  test_config.py  test_database.py  test_email_service.py  test_fashion_clip_cloud.py  test_feature_learning_api.py  test_feature_learning_integration.py  test_feature_learning_service.py  test_gemini_integration.py  test_gemini_service.py  test_gemini_service_current.py  test_main.py  test_memory.py  test_migrations.py  test_models_clothing_item.py  test_models_outfit_recommendation.py  test_models_style_profile.py  test_models_user.py  test_outfit_matching_service.py  test_outfit_recommendation_improvements.py  test_outfit_recommendation_integration.py  test_quiz_algorithm_unit.py  test_quiz_matching_algorithm.py  test_quiz_system.py  test_scalability.py  test_schemas_validation.py  test_security_validation.py  test_user_management_api.py  test_utils.py
(+67 files in other folders)
